src/test/resources/org/xmlcml/www/cmlcomp/invalid/undefined-module.cml
<?xml version="1.0" encoding="UTF-8"?>
<cml
    convention="conventions:cmlcomp"
    cmlx:note="A cmlcomp containing undefined cmlcomp element, i.e. module without role, is invalid."
    xmlns="http://www.xml-cml.org/schema"
    xmlns:conventions="http://www.xml-cml.org/conventions/"
    xmlns:cmlx="http://www.xml-cml.org/schema/cmlx">
    <module></module>
</cml>